# someip-pubsub-mitm

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml
attacker/: Dockerfile  entrypoint.sh  someip_mitm_attacker.py  someip_mitm_utils.py
client/: entrypoint.sh  radio-client.json
server/: entrypoint.sh  radio-service.json
src/: CMakeLists.txt  radio-client.cpp  radio-service.cpp  services.hpp
